--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,6 +4,7 @@
   "holonomicMode": true,
   "pathFolders": [
     "Bottom",
+    "Middle",
     "Top"
   ],
   "autoFolders": [],
@@ -17,7 +18,7 @@
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.0508,
   "driveGearing": 6.75,
-  "maxDriveSpeed": 4.544,
+  "maxDriveSpeed": 5.2,
   "driveMotorType": "vortex",
   "driveCurrentLimit": 40.0,
   "wheelCOF": 0.7,
