--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,10 +4,12 @@
   "holonomicMode": true,
   "pathFolders": [
     "Bottom",
+    "Bottom L2",
     "Middle",
     "Middle L4",
-    "Bottom L2",
-    "Top"
+    "Bottom L4",
+    "Top",
+    "Top L4"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
