comp auto and auto align changes

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -6,8 +6,9 @@
     "Left",
     "Left L4",
     "Middle",
-    "Middle L4",
     "Middle Algae",
+    "Middle L4",
+    "Push",
     "Right",
     "Right L4"
   ],
